# Git_Commander

./: .gitignore  .pylintrc  CHANGELOG  LICENSE  MainWindow.ui  Pipfile  README.md  README.rst  VERSION_HISTORY.txt  __main__.spec  actions.py  build.sh  clone_dialog.wxg  employee.ui  freeze.sh  layout-labels.ui  main.py  main.spec  pyproject.toml  reload.sh  requirements.txt  ui.wxg  ui.wxg.bak  wxglade.wxg  wxglade.wxg.bak  wxglade_out.py  wxglade_out.py.bak
.github/workflows/: pylint.yml
.run/: Dev.run.xml
archive/: RepoSearch.py  main.py
gitcommander/: CHANGELOG  README.rst  pyproject.toml
gitcommander/src/gitcommander/: ExampleFrame.py  ExamplePanel.py  Main_Window.py  Text_editor.py  __main__.py  app.py
src/: CloneDialog  CloneDialog.py  DragSelectList.py  MainFrame.py  Main_Window.py  MyFrame.py  Threader.py  __main__.py  actions.py  app.py  app.py.bak  console_output.py  constants.py  list_management.py  main.py  menu_actions.py  ui.wxg  utils.py  wxglade_out.py  wxglade_out.py.bak
src/Frames/: Main.py  __init__.py
src/Frames/Panels/: repo_list.py  repo_list_view.py
src/Frames/Panels/Models/: repo_list.py
src/Panels/: repo_list_view.py
src/git_commander.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/gitcommander/: MainWindow.py  RepoList.py  __main__.py  actions.py  app.py  repo_list.py  repo_list_source.py
src/gitcommander/models/: repo_list.py
src/gitcommander/views/: repo_list_table.py
ui/: MainWindow.ui  RepoSelector.ui
