[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "git_commander"
authors = [
    {name = "Jim Hessin", email = 'jhessin@gmail.com'}
]
description = "A simple tool to manage pushing and pulling repositories."
readme = "README.md"
requires-python = ">=3.13.1"
keywords = ["git", "vcs"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "wxpython",
]
dynamic = ["version"]

[project.scripts]
test = "app:test"

[project.gui-scripts]
gitcommander = "app:main"

[tool.setuptools]
package-dir = { "" = "src"}

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/