[project]
name = "git-commander"
version = "0.1.1a0"
description = "A basic tool for managing multiple git repositories."
authors = [
    {name = "Jim Hessin",email = "jhessin@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "wxpython (>=4.2.5,<5.0.0)",
    "wxasync (>=0.49,<0.50)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
gc = "src.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
